# arkistore_system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  plan.md  research.md  로그문서.txt  프로젝트_개요.txt
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/core/: config.py  database.py  enums.py  exceptions.py  idempotency.py  logging.py  middleware.py  permissions.py  responses.py  security.py
apps/api/app/db/: base.py
apps/api/app/integrations/: __init__.py
apps/api/app/models/: __init__.py  admin_action.py  attachment.py  capacity_slot.py  consultation.py  contract.py  customer.py  delivery.py  deployment_record.py  error_report.py  event_log.py  github_issue.py  happy_call.py  inventory.py  invoice.py  issue_group.py  lead.py  product.py  project.py  project_site.py  purchase_order.py  purchase_request.py  role.py  sheet_sync_job.py  shipment.py  user.py
apps/api/app/repositories/: __init__.py  attachment_repository.py  base.py  capacity_slot_repository.py  consultation_repository.py  contract_repository.py  customer_repository.py  delivery_repository.py  event_log_repository.py  happy_call_repository.py  inventory_repository.py  invoice_repository.py  issue_repository.py  lead_repository.py  product_repository.py  project_repository.py  purchase_order_repository.py  purchase_request_repository.py  shipment_repository.py  sync_job_repository.py  user_repository.py
apps/api/app/schemas/: __init__.py  auth.py  (+20 more)
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py
(+168 files in other folders)
